--- a/web/index.html
+++ b/web/index.html
@@ -14,11 +14,59 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+
+<!--  <style>-->
+<!--    .loading {-->
+<!--      display: flex;-->
+<!--      justify-content: center;-->
+<!--      align-items: center;-->
+<!--      margin: 0;-->
+<!--      position: absolute;-->
+<!--      top: 50%;-->
+<!--      left: 50%;-->
+<!--      -ms-transform: translate(-50%, -50%);-->
+<!--      transform: translate(-50%, -50%);-->
+<!--    }-->
+
+<!--    .loader {-->
+<!--      border: 16px solid #f3f3f3;-->
+<!--      border-radius: 50%;-->
+<!--      border: 15px solid ;-->
+<!--      border-top: 16px solid blue;-->
+<!--      border-right: 16px solid white;-->
+<!--      border-bottom: 16px solid blue;-->
+<!--      border-left: 16px solid white;-->
+<!--      width: 120px;-->
+<!--      height: 120px;-->
+<!--      -webkit-animation: spin 2s linear infinite;-->
+<!--      animation: spin 2s linear infinite;-->
+<!--    }-->
+
+<!--    @-webkit-keyframes spin {-->
+<!--      0% {-->
+<!--        -webkit-transform: rotate(0deg);-->
+<!--      }-->
+<!--      100% {-->
+<!--        -webkit-transform: rotate(360deg);-->
+<!--      }-->
+<!--    }-->
+
+<!--    @keyframes spin {-->
+<!--      0% {-->
+<!--        transform: rotate(0deg);-->
+<!--      }-->
+<!--      100% {-->
+<!--        transform: rotate(360deg);-->
+<!--      }-->
+<!--    }-->
+<!--  </style>-->
+
+  <base href="/input/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -36,6 +84,9 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+<!--  <div class="loading">-->
+<!--    <div class="loader"></div>-->
+<!--  </div>-->
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
